[project]
name = "audio-filter"
version = "0.1.0"
description = "Real-time audio processing tools: voice isolation and live transcription"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "demucs>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "tqdm>=4.65.0",
    "faster-whisper>=1.0.0",
]
